# bot-itika-v2

./: Dockerfile  README.md  app.py  chat.py  cli_chat.py  get_message.py  get_wiki.py  pyproject.toml  traq_api.py
