[project]
name = "bot-itika-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-deepseek-official>=0.1.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "duckduckgo-search>=7.3.0",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.69",
    "langchain-google-genai>=2.0.9",
]
